@startuml
	
	title Iterator
	
	class IteratorMain{
		+ void {static} main(String[] args)
	}
	
	interface Iterator{
		+ void first()
		+ void next()
		+ boolean isDone()
		+ Object currentItem()
	}
	
	interface Iterable{
		+ Iterator createIterator()
	}
	
	class Destinations{
		- ArrayList<String> destinations
		+ void add(String value)
		+ Iterator createIterator()
	}
	
	class DestinationsIterator{
		- ArrayList<String> destinations
		- int position
		+ DestinationsIterator(ArrayList<String> destinations)
		+ void first()
		+ void next()
		+ boolean isDone()
		+ Object currentItem()
	}
	
	
	
	Iterable <|-- Destinations
	Iterator <|-- DestinationsIterator
	DestinationsIterator <.right. Destinations
	Iterator <-right- IteratorMain
	Iterable <-left- IteratorMain
	Destinations <-left- DestinationsIterator
	
@enduml